--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,27 +1,3 @@
+<app-header></app-header>
 
-
- <div class="row" style="background: black; height: 40px;">
-    <div class="col-md-6" >
-      <span style="color: yellow;">{{userRole}}</span>
-    </div>
-    
-    <div class="col-md-6" style="text-align: right;">
-        <span style="color: white; margin-right: 25px;">{{userName}}</span>
-        <span><Button class="btn btn-link">Logout</Button></span>
-    </div>
-</div>
-
-
-<div class="row" style="background: cadetblue; padding-top: 15px; padding-bottom: 15px; font-weight: bold;">
-    <div class="col-md-12">
-        <div style="margin-left:150px">
-            <span [routerLink]="['/dashboard']">     Home    </span> |
-            <span [routerLink]="['/students']">  Students</span>  |
-            <span [routerLink]="['/school']">  School </span>  |
-            <span [routerLink]="['/class']">  Class </span>  |
-            <span [routerLink]="['/university']">  University </span>
-        </div>
-    </div>
-</div>  
-
-
+<app-footer></app-footer>
