--- a/src/app/students/students.component.css
+++ b/src/app/students/students.component.css
@@ -6,3 +6,12 @@ span:hover{
     color: white;
     text-decoration: underline;
 }
+
+table , td , th{
+    border: 1px solid;
+}
+table{
+    border-collapse: collapse;
+    width: 100%;
+    text-align: center;
+}
